[metadata]
name = IsoCor
version = attr: isocor.__version__
author = Pierre Millard, Baudoin Délépine, Matthieu Guionnet
author_email = millard@insa-toulouse.fr
description = IsoCor: Isotope Correction for mass spectrometry labeling experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MetaSys-LISBP/IsoCor/
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    pandas >= 0.17.1,
    scipy >= 0.12.1

[options.entry_points]
console_scripts =
    isocorcli = isocor.ui.isocorcli:start_cli
gui_scripts =
    isocor = isocor.ui.isocorgui:start_gui

[options.extras_require]
testing =
    pytest>=7.1.2
    tox>=3.25.0
